# huffman_compressing

./: .gitignore  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  Makefile
lib/headers/: BitCode.h  BitFileReader.h  BitFileWriter.h  BitStreamReader.h  BitStreamWriter.h  Stat.h  Tree.h  exceptions.h  huffman.h
lib/src/: Tree.cpp  huffman.cpp
lib/testing/: huffman_testing.cpp
